// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#createPubSubProjectSubscriptionEntity should convert to entity 1`] = `
{
  "_class": [
    "Service",
  ],
  "_key": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "ackDeadlineSeconds": 10,
        "expirationPolicy": {
          "ttl": "2678400s",
        },
        "messageRetentionDuration": "604800s",
        "name": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
        "topic": "projects/j1-gc-integration-dev-v2/topics/mock-topic",
      },
    },
  ],
  "_type": "google_pubsub_subscription",
  "ackDeadlineSeconds": 10,
  "category": [
    "application",
  ],
  "createdOn": undefined,
  "deadLetter": false,
  "displayName": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
  "enableMessageOrdering": false,
  "expirationPolicyTtl": "2678400s",
  "function": [
    "notification",
  ],
  "isDefaultRetryPolicy": true,
  "isDetached": undefined,
  "maximumBackoff": undefined,
  "messageRetentionDuration": "604800s",
  "minimumBackoff": undefined,
  "name": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
  "pushEndpoint": undefined,
  "webLink": "https://console.cloud.google.com/cloudpubsub/subscription/detail/mock-subscription?project=j1-gc-integration-dev-v2",
}
`;

exports[`#createPubSubProjectSubscriptionEntity should have deadLetter set to false if it is not using dead letter 1`] = `
{
  "_class": [
    "Service",
  ],
  "_key": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "ackDeadlineSeconds": 10,
        "expirationPolicy": {
          "ttl": "2678400s",
        },
        "messageRetentionDuration": "604800s",
        "name": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
        "topic": "projects/j1-gc-integration-dev-v2/topics/mock-topic",
      },
    },
  ],
  "_type": "google_pubsub_subscription",
  "ackDeadlineSeconds": 10,
  "category": [
    "application",
  ],
  "createdOn": undefined,
  "deadLetter": false,
  "displayName": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
  "enableMessageOrdering": false,
  "expirationPolicyTtl": "2678400s",
  "function": [
    "notification",
  ],
  "isDefaultRetryPolicy": true,
  "isDetached": undefined,
  "maximumBackoff": undefined,
  "messageRetentionDuration": "604800s",
  "minimumBackoff": undefined,
  "name": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
  "pushEndpoint": undefined,
  "webLink": "https://console.cloud.google.com/cloudpubsub/subscription/detail/mock-subscription?project=j1-gc-integration-dev-v2",
}
`;

exports[`#createPubSubProjectSubscriptionEntity should have deadLetter set to true if it is using dead letter 1`] = `
{
  "_class": [
    "Service",
  ],
  "_key": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "ackDeadlineSeconds": 10,
        "deadLetterPolicy": {
          "deadLetterTopic": "projects/j1-gc-integration-dev-v2/topics/mock-topic-dead-letter",
          "maxDeliveryAttempts": 10,
        },
        "expirationPolicy": {
          "ttl": "2678400s",
        },
        "messageRetentionDuration": "604800s",
        "name": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
        "topic": "projects/j1-gc-integration-dev-v2/topics/mock-topic",
      },
    },
  ],
  "_type": "google_pubsub_subscription",
  "ackDeadlineSeconds": 10,
  "category": [
    "application",
  ],
  "createdOn": undefined,
  "deadLetter": true,
  "displayName": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
  "enableMessageOrdering": false,
  "expirationPolicyTtl": "2678400s",
  "function": [
    "notification",
  ],
  "isDefaultRetryPolicy": true,
  "isDetached": undefined,
  "maximumBackoff": undefined,
  "messageRetentionDuration": "604800s",
  "minimumBackoff": undefined,
  "name": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
  "pushEndpoint": undefined,
  "webLink": "https://console.cloud.google.com/cloudpubsub/subscription/detail/mock-subscription?project=j1-gc-integration-dev-v2",
}
`;

exports[`#createPubSubProjectSubscriptionEntity should have enableMessageOrdering set to false if it is not enabled 1`] = `
{
  "_class": [
    "Service",
  ],
  "_key": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "ackDeadlineSeconds": 10,
        "expirationPolicy": {
          "ttl": "2678400s",
        },
        "messageRetentionDuration": "604800s",
        "name": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
        "topic": "projects/j1-gc-integration-dev-v2/topics/mock-topic",
      },
    },
  ],
  "_type": "google_pubsub_subscription",
  "ackDeadlineSeconds": 10,
  "category": [
    "application",
  ],
  "createdOn": undefined,
  "deadLetter": false,
  "displayName": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
  "enableMessageOrdering": false,
  "expirationPolicyTtl": "2678400s",
  "function": [
    "notification",
  ],
  "isDefaultRetryPolicy": true,
  "isDetached": undefined,
  "maximumBackoff": undefined,
  "messageRetentionDuration": "604800s",
  "minimumBackoff": undefined,
  "name": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
  "pushEndpoint": undefined,
  "webLink": "https://console.cloud.google.com/cloudpubsub/subscription/detail/mock-subscription?project=j1-gc-integration-dev-v2",
}
`;

exports[`#createPubSubProjectSubscriptionEntity should have enableMessageOrdering set to true if it is enabled 1`] = `
{
  "_class": [
    "Service",
  ],
  "_key": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "ackDeadlineSeconds": 10,
        "enableMessageOrdering": true,
        "expirationPolicy": {
          "ttl": "2678400s",
        },
        "messageRetentionDuration": "604800s",
        "name": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
        "topic": "projects/j1-gc-integration-dev-v2/topics/mock-topic",
      },
    },
  ],
  "_type": "google_pubsub_subscription",
  "ackDeadlineSeconds": 10,
  "category": [
    "application",
  ],
  "createdOn": undefined,
  "deadLetter": false,
  "displayName": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
  "enableMessageOrdering": true,
  "expirationPolicyTtl": "2678400s",
  "function": [
    "notification",
  ],
  "isDefaultRetryPolicy": true,
  "isDetached": undefined,
  "maximumBackoff": undefined,
  "messageRetentionDuration": "604800s",
  "minimumBackoff": undefined,
  "name": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
  "pushEndpoint": undefined,
  "webLink": "https://console.cloud.google.com/cloudpubsub/subscription/detail/mock-subscription?project=j1-gc-integration-dev-v2",
}
`;

exports[`#createPubSubProjectSubscriptionEntity should have isDefaultRetryPolicy set to false as well as minimumBackoff and maximumBackoff properties if the subscription is not using the default retry policy 1`] = `
{
  "_class": [
    "Service",
  ],
  "_key": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "ackDeadlineSeconds": 10,
        "expirationPolicy": {
          "ttl": "2678400s",
        },
        "messageRetentionDuration": "604800s",
        "name": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
        "retryPolicy": {
          "maximumBackoff": "600s",
          "minimumBackoff": "10s",
        },
        "topic": "projects/j1-gc-integration-dev-v2/topics/mock-topic",
      },
    },
  ],
  "_type": "google_pubsub_subscription",
  "ackDeadlineSeconds": 10,
  "category": [
    "application",
  ],
  "createdOn": undefined,
  "deadLetter": false,
  "displayName": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
  "enableMessageOrdering": false,
  "expirationPolicyTtl": "2678400s",
  "function": [
    "notification",
  ],
  "isDefaultRetryPolicy": false,
  "isDetached": undefined,
  "maximumBackoff": "600s",
  "messageRetentionDuration": "604800s",
  "minimumBackoff": "10s",
  "name": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
  "pushEndpoint": undefined,
  "webLink": "https://console.cloud.google.com/cloudpubsub/subscription/detail/mock-subscription?project=j1-gc-integration-dev-v2",
}
`;

exports[`#createPubSubProjectSubscriptionEntity should have isDefaultRetryPolicy set to true if the subscription is using the default retry policy 1`] = `
{
  "_class": [
    "Service",
  ],
  "_key": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "ackDeadlineSeconds": 10,
        "expirationPolicy": {
          "ttl": "2678400s",
        },
        "messageRetentionDuration": "604800s",
        "name": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
        "topic": "projects/j1-gc-integration-dev-v2/topics/mock-topic",
      },
    },
  ],
  "_type": "google_pubsub_subscription",
  "ackDeadlineSeconds": 10,
  "category": [
    "application",
  ],
  "createdOn": undefined,
  "deadLetter": false,
  "displayName": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
  "enableMessageOrdering": false,
  "expirationPolicyTtl": "2678400s",
  "function": [
    "notification",
  ],
  "isDefaultRetryPolicy": true,
  "isDetached": undefined,
  "maximumBackoff": undefined,
  "messageRetentionDuration": "604800s",
  "minimumBackoff": undefined,
  "name": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
  "pushEndpoint": undefined,
  "webLink": "https://console.cloud.google.com/cloudpubsub/subscription/detail/mock-subscription?project=j1-gc-integration-dev-v2",
}
`;

exports[`#createPubSubProjectSubscriptionEntity should have pushEndpoint value if the subscription is using push 1`] = `
{
  "_class": [
    "Service",
  ],
  "_key": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "ackDeadlineSeconds": 10,
        "expirationPolicy": {
          "ttl": "2678400s",
        },
        "messageRetentionDuration": "604800s",
        "name": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
        "pushConfig": {
          "pushEndpoint": "https://j1-gc-integration-dev-v2.uc.r.appspot.com/",
        },
        "topic": "projects/j1-gc-integration-dev-v2/topics/mock-topic",
      },
    },
  ],
  "_type": "google_pubsub_subscription",
  "ackDeadlineSeconds": 10,
  "category": [
    "application",
  ],
  "createdOn": undefined,
  "deadLetter": false,
  "displayName": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
  "enableMessageOrdering": false,
  "expirationPolicyTtl": "2678400s",
  "function": [
    "notification",
  ],
  "isDefaultRetryPolicy": true,
  "isDetached": undefined,
  "maximumBackoff": undefined,
  "messageRetentionDuration": "604800s",
  "minimumBackoff": undefined,
  "name": "projects/j1-gc-integration-dev-v2/subscriptions/mock-subscription",
  "pushEndpoint": "https://j1-gc-integration-dev-v2.uc.r.appspot.com/",
  "webLink": "https://console.cloud.google.com/cloudpubsub/subscription/detail/mock-subscription?project=j1-gc-integration-dev-v2",
}
`;

exports[`#createPubSubProjectTopicEntity should convert to entity 1`] = `
{
  "_class": [
    "Channel",
  ],
  "_key": "projects/j1-gc-integration-dev-v2/topics/example-topic",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "name": "projects/j1-gc-integration-dev-v2/topics/example-topic",
      },
    },
  ],
  "_type": "google_pubsub_topic",
  "category": [
    "application",
  ],
  "createdOn": undefined,
  "displayName": "projects/j1-gc-integration-dev-v2/topics/example-topic",
  "function": [
    "other",
  ],
  "kmsKeyName": undefined,
  "name": "projects/j1-gc-integration-dev-v2/topics/example-topic",
  "public": false,
  "webLink": "https://console.cloud.google.com/cloudpubsub/topic/detail/example-topic?project=j1-gc-integration-dev-v2",
}
`;
